# sqlfuzz

./: .gitignore  Cargo.toml  README.md
runners/spark/: README.md  pom.xml
runners/spark/src/main/scala/: Main.scala
src/: fuzz_data.rs  fuzz_sql.rs  generator.rs  lib.rs  main.rs  plan_to_sql.rs  sql_writer.rs
testdata/: example.sql  test0.parquet  test1.parquet  test2.parquet  test3.parquet
