[package]
name = "sqlfuzz"
description = "Generate random (and sometimes valid!) queries from any local Parquet, CSV, JSON, or Avro data set."
homepage = "https://github.com/andygrove/sqlfuzz"
repository = "https://github.com/andygrove/sqlfuzz"
authors = ["Andy Grove <andygrove73@gmail.com>"]
keywords = [ "sql", "fuzzer" ]
license = "Apache-2.0"
version = "0.3.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
datafusion = "9.0"
rand = "0.8"
structopt = "0.3"
tokio = "1.19"
rust_decimal = "1.33"
